force-app/main/default/objects/Case_send_email_default_from__mdt/Case_send_email_default_from__mdt.object-meta.xml
<CustomObject>
    <label>Case: send email default  from</label>
    <pluralLabel>Case: send email default  from</pluralLabel>
</CustomObject>