force-app/main/default/objects/Case_send_email_default_from__mdt/fields/Default_email__c.field-meta.xml
<CustomField>
    <fullName>Default_email__c</fullName>
    <label>Default email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>