force-app/main/default/objects/Case_send_email_default_from__mdt/fields/Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Email__c</fullName>
    <label>Team Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>