force-app/main/default/objects/Case_send_email_default_from__mdt/fields/Team_name__c.field-meta.xml
<CustomField>
    <fullName>Team_name__c</fullName>
    <label>Team name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>